# slido-clone

./: .gitignore  QUESTION-FIXES.md  README.md  SIMPLIFIED-HOST-VALIDATION.md  T030-T032-COMPLETE.md  T033-MIGRATION-COMPLETE.md  T038-VALIDATION-COMPLETE.md  T039-TESTING-CHECKLIST.md  TEST-RESULTS-SUMMARY.md  WEBSOCKET-QUESTIONS-FIXES.md  WEBSOCKET_FIXES_SUMMARY.md  current-features  docker-compose.yml
.github/: copilot-instructions.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 628c7129289e_remove_question_status_column.py  9372cec8298d_initial_schema.py  aba759167d5b_add_is_answered_to_questions.py  afc106c8cd16_remove_question_status_column.py  c1b85c454f94_add_composite_index_host_code_created_at.py
backend/src/: main.py
backend/src/api/: __init__.py  events.py  polls.py  questions.py  websocket.py
backend/src/core/: __init__.py  config.py  database.py  security.py  validation.py
backend/src/models/: __init__.py  attendee.py  event.py  poll.py  poll_option.py  poll_response.py  question.py  question_vote.py
backend/src/services/: __init__.py  event_service.py  poll_service.py  question_service.py
backend/tests/: conftest.py  test_e2e_websocket.py  test_question_integration.py  test_websocket_integration.py
backend/tests/contract/: test_create_event_contract.py  test_events_get.py  test_events_host.py  test_events_post.py  test_polls_post.py  test_polls_status.py  test_polls_vote.py  test_websocket_polls.py
backend/tests/integration/: test_host_workflow.py
(+48 files in other folders)
